# voxse

./: .gitattributes  .gitignore  THIRD_PARTY_NOTICES.md
cpp/: CMakeLists.txt
cpp/include/voxse/: config.hpp
cpp/src/: main.cpp
docs/: devlog.md  tutorial_progress.md
py/: camera.py  main.py  player.py  scene.py  settings.py  shader_program.py  textures.py  world.py
py/meshes/: base_mesh.py  chunk_mesh.py  chunk_mesh_builder.py  quad_mesh.py
py/shaders/: chunk.frag  chunk.vert  quad.vert
py/world_objects/: chunk.py
